[package]
name = "distance_research"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

[profile.release]
overflow-checks = true

[dependencies]
rand = "0.8"
rand_distr = "0.4"
bits = {git = "https://github.com/gjf2a/bits"}
hash_histogram = "0.6"
kmeans = {git = "https://github.com/gjf2a/kmeans"}
supervised_learning = {git = "https://github.com/gjf2a/supervised_learning"}
knn = {git = "https://github.com/gjf2a/knn"}
iced = { version = "0.3", features = ["canvas", "tokio", "debug"] }
bare_metal_modulo = "0.9.0"